feat(api): standardize API response format with trip_plan wrapper and reviews array, implement SavedPlanController